objects/WorkOrder/fields/CompanyRevenue__c.field-meta.xml
<CustomField>
    <fullName>CompanyRevenue__c</fullName>
    <formula>TotalPrice/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>