objects/WorkOrder/fields/CrewSize__c.field-meta.xml
<CustomField>
    <fullName>CrewSize__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Crew Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>