objects/WorkOrder/fields/IsRecurringJob__c.field-meta.xml
<CustomField>
    <fullName>IsRecurringJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recurring Job?</label>
    <type>Checkbox</type>
</CustomField>