objects/WorkOrder/fields/JobDate__c.field-meta.xml
<CustomField>
    <fullName>JobDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Job Date</label>
    <type>Date</type>
</CustomField>