objects/WorkOrder/fields/TotalUnits__c.field-meta.xml
<CustomField>
    <fullName>TotalUnits__c</fullName>
    <label>Total Units</label>
    <summarizedField>WorkOrderLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>